RESOLVED FIXED 233243
[RISCV64] Fix floating-point register listings in FPRInfo.h
https://bugs.webkit.org/show_bug.cgi?id=233243
Summary [RISCV64] Fix floating-point register listings in FPRInfo.h
Zan Dobersek
Reported 2021-11-16 23:51:25 PST
[RISCV64] Fix floating-point register listings in FPRInfo.h
Attachments
Patch (6.55 KB, patch)
2021-11-16 23:54 PST, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2021-11-16 23:54:42 PST
Radar WebKit Bug Importer
Comment 2 2021-11-23 23:52:20 PST
Yusuke Suzuki
Comment 3 2021-11-24 15:26:59 PST
Comment on attachment 444487 [details] Patch r=me
EWS
Comment 4 2021-11-24 15:50:06 PST
Committed r286154 (244538@main): <https://commits.webkit.org/244538@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444487 [details].
Note You need to log in before you can comment on or make changes to this bug.