[RISCV64] Fix floating-point register listings in FPRInfo.h https://bugs.webkit.org/show_bug.cgi?id=233243

Patch by Zan Dobersek <zdobersek@igalia.com> on 2021-11-24
Reviewed by Yusuke Suzuki.

As with general-purpose registers, fpRegT0 to fpRegT7 assignments have
to match the argument registers. Index-to-FPRReg mapping functions are
updated accordingly.

* jit/FPRInfo.h:
(JSC::FPRInfo::toRegister):
(JSC::FPRInfo::toIndex):


Canonical link: https://commits.webkit.org/244538@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286154 268f45cc-cd09-0410-ab3c-d52691b4dbfc